# ecom_test_task

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: entrypoint.sh
app/api_v1/: __init__.py  api.py  db.py  main.py
app/api_v1/Grades/: __init__.py  crud.py  schemas.py  service.py  views.py
app/api_v1/Students/: __init__.py  crud.py  schemas.py  views.py
app/api_v1/settings/: config.py
migrations/: create_tables.sql
tests/: conftest.py  test_integration.py  test_parser.py
